--- a/comounirse.html
+++ b/comounirse.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <title>¿Cómo unirse? - Hernavia</title>
+    <!-- Carga head.html (favicon, meta, estilos) -->
     <div id="head-placeholder"></div>
     <script>
         fetch('head.html')
@@ -10,8 +11,8 @@
                 document.head.innerHTML += data;
             });
     </script>
-
     <style>
+        /* Ajustes específicos de este formulario */
         form {
             max-width: 600px;
             margin: 20px auto;
@@ -33,56 +34,75 @@
             border-radius: 5px;
             cursor: pointer;
             font-weight: bold;
-
+            transition: background-color 0.3s ease;
+        }
+        form button:hover {
+            background-color: #004a2d;
+        }
+        label { font-weight: bold; }
+        .section {
+            max-width: 900px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: white;
+            border-left: 8px solid #006A44;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+    </style>
+</head>
 <body>
-    <header>
-        <h1>¿Cómo unirse a Hernavia?</h1>
-    </header>
 
+<header>
+    <h1>¿Cómo unirse a Hernavia?</h1>
+</header>
+
+<!-- Barra de navegación cargada dinámicamente -->
 <div id="nav-placeholder"></div>
-
 <script>
-fetch('nav.html')
-.then(response => response.text())
-.then(data => {
-    document.getElementById('nav-placeholder').innerHTML = data;
-});
+    fetch('nav.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('nav-placeholder').innerHTML = data;
+        });
 </script>
 
-    <section class="section">
-        <p>Actualmente la ciudadanía por método virtual no está habilitada, aunque si lo desea puede llenar este formulario y cuando se habilite la ciudadanía virtual se le avisará y se tendrá en cuenta.</p>
+<section class="section">
+    <p>Actualmente la ciudadanía por método virtual no está habilitada, aunque si lo desea puede llenar este formulario y cuando se habilite la ciudadanía virtual se le avisará y se tendrá en cuenta.</p>
 
-        <form action="https://formspree.io/f/xldpgjop" method="POST">
-            <label for="nombre">Nombre completo:</label>
-            <input type="text" id="nombre" name="nombre" required>
+    <form action="https://formspree.io/f/xldpgjop" method="POST">
+        <label for="nombre">Nombre completo:</label>
+        <input type="text" id="nombre" name="nombre" required>
 
-            <label for="correo">Correo electrónico:</label>
-            <input type="email" id="correo" name="correo" required>
+        <label for="correo">Correo electrónico:</label>
+        <input type="email" id="correo" name="correo" required>
 
-            <label for="edad">Edad:</label>
-            <input type="number" id="edad" name="edad" min="1" max="120" required>
+        <label for="edad">Edad:</label>
+        <input type="number" id="edad" name="edad" min="1" max="120" required>
 
-            <label for="ciudad">País / Ciudad:</label>
-            <input type="text" id="ciudad" name="ciudad" required>
+        <label for="ciudad">País / Ciudad:</label>
+        <input type="text" id="ciudad" name="ciudad" required>
 
-            <label for="ocupacion">Ocupación(opcional):</label>
-            <input type="text" id="ocupacion" name="ocupacion">
+        <label for="ocupacion">Ocupación (opcional):</label>
+        <input type="text" id="ocupacion" name="ocupacion">
 
-            <label for="comentario">Motivación para unirse(opcional)</label>
-            <textarea id="comentario" name="comentario" 
+        <label for="comentario">Motivación para unirse (opcional):</label>
+        <textarea id="comentario" name="comentario" rows="4" placeholder="Escribe aquí tu motivación..."></textarea>
 
-            <label>
-                <input type="checkbox" name="terminos" required>
-                Acepto los términos y condiciones de Hernavia.
-            </label>
+        <label>
+            <input type="checkbox" name="terminos" required>
+            Acepto los términos y condiciones de Hernavia.
+        </label>
 
-            <button type="submit">Enviar solicitud</button>
-        </form>
-    </section>
+        <button type="submit">Enviar solicitud</button>
+    </form>
+</section>
 
-    <footer>
-        &copy; 2025 Hernavia - Proyecto Cultural
-    </footer>
+<footer>
+    &copy; 2025 Hernavia - Proyecto Cultural
+</footer>
+
 </body>
 </html>
+
 
