--- a/sugerencias.html
+++ b/sugerencias.html
@@ -77,8 +77,8 @@ fetch('nav.html')
         </form>
 
         <p>o tambien puedes visitar nuestras redes sociales y hacernos las preguntas hay o simplemerte hecharle un vistaso</p>
-        Nuestro instagram:https://www.instagram.com/hernaviaoficial?igsh=MTd4MHpiZmp2anVoda==
-        Nuestro youtube:https://www.youtube.com/@Hernaviaoficial
+        <p>Nuestro instagram:https://www.instagram.com/hernaviaoficial?igsh=MTd4MHpiZmp2anVoda==</p>
+        <p>Nuestro youtube:https://www.youtube.com/@Hernaviaoficial</p>
     </section>
 
     <footer>
