--- a/sugerencias.html
+++ b/sugerencias.html
@@ -75,10 +75,13 @@ fetch('nav.html')
 
             <button type="submit">Enviar sugerencia</button>
         </form>
+        
+       <p>O también puedes visitar nuestras redes sociales y hacernos las preguntas ahí o simplemente echarle un vistazo:</p>
 
-        <p>o tambien puedes visitar nuestras redes sociales y hacernos las preguntas hay o simplemerte hecharle un vistaso</p>
-        <p>Nuestro instagram:https://www.instagram.com/hernaviaoficial?igsh=MTd4MHpiZmp2anVoda==</p>
-        <p>Nuestro youtube:https://www.youtube.com/@Hernaviaoficial</p>
+<p>Nuestro Instagram: <a href="https://www.instagram.com/hernaviaoficial" target="_blank">https://www.instagram.com/hernaviaoficial</a></p>
+
+<p>Nuestro YouTube: <a href="https://www.youtube.com/@Hernaviaoficial" target="_blank">https://www.youtube.com/@Hernaviaoficial</a></p>
+
     </section>
 
     <footer>
