--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
   <meta name="author" content="Proyecto Hernavia">
   <meta name="robots" content="index, follow">
 
+  <!-- Ícono -->
   <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+
+  <!-- Precarga de estilos -->
   <link rel="preload" href="estilo.css" as="style">
   <link rel="stylesheet" href="estilo.css">
+
+  <!-- Manifesto para PWA -->
   <link rel="manifest" href="manifest.json">
+
+  <!-- URL canónica -->
   <link rel="canonical" href="https://hernavia.github.io/Hernavia/">
 </head>
 
@@ -54,67 +61,127 @@
     <section id="significado">
       <h2>Significado de los colores</h2>
       <ul>
-        <li><strong>Verde:</strong> Representa la naturaleza y la innovación.</li>
-        <li><strong>Blanco:</strong> Simboliza la paz, unión y fraternidad.</li>
+        <li><strong>Verde:</strong> Representa la naturaleza y su tono particular simboliza también la innovación.</li>
+        <li><strong>Blanco:</strong> Simboliza la paz, cohesión, unión y fraternidad.</li>
         <li><strong>Amarillo:</strong> Representa las raíces con Colombia.</li>
       </ul>
     </section>
   </main>
-<style>
-.faq-container {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
 
-.faq-card {
-  background-color: white;
-  border: 2px solid #006A44;
-  border-radius: 10px;
-  padding: 25px 20px; /* ← aumentamos área clickeable */
-  cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-}
+  <!-- Sección de Preguntas Frecuentes -->
+  <section class="section">
+    <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
 
-.faq-card summary {
-  font-weight: bold;
-  color: #006A44;
-  font-size: 1.2em; /* ← texto más grande */
-  list-style: none;
-  outline: none;
-}
+    <div style="text-align:center;">
+      <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+    </div>
 
-.faq-card summary::marker {
-  display: none;
-}
+    <div id="faqContainer" class="faq-container" style="display:none; margin-top:15px;">
 
-.faq-card[open] {
-  background-color: #f4fff9;
-  border-color: #004a2d;
-}
+      <details class="faq-card">
+        <summary>¿Cómo los puedo contactar?</summary>
+        <p>Puedes escribirnos desde la sección de <a href="sugerencias.html">Sugerencias</a> o a través de nuestras redes sociales. Todos los mensajes llegan directamente al equipo de Hernavia.</p>
+      </details>
 
-.faq-card p {
-  margin-top: 10px;
-  color: #333;
-  line-height: 1.5;
-}
-</style>
- 
+      <details class="faq-card">
+        <summary>¿Por qué “Arconte”?</summary>
+        <p>Es un término simbólico elegido para representar una figura de liderazgo dentro de Hernavia. El nombre de Arconte fue escogido para distinguir a Hernavia sin aferrarse a títulos tradicionales.</p>
+      </details>
+
+      <details class="faq-card">
+        <summary>¿Por qué la ciudadanía virtual aún no está disponible?</summary>
+        <p>Porque la organización de Hernavia aún no puede coexistir de manera efectiva si los ciudadanos virtuales tienen los mismos deberes y derechos. Esto se debe a la capacidad limitada de alcance y la política de aporte obligatorio vigente.</p>
+      </details>
+
+      <details class="faq-card">
+        <summary>¿Existen riesgos legales al unirse a Hernavia?</summary>
+        <p>No. Todas las sanciones son internas y no hay riesgos legales reales por incumplimiento. Las sanciones solo pueden incluir medidas internas o la revocación de la ciudadanía según las leyes transitorias.</p>
+      </details>
+
+      <details class="faq-card">
+        <summary>¿Hernavia tiene afiliación política o religiosa?</summary>
+        <p>No. Hernavia es completamente subjetiva e independiente. Aunque puede mostrar apoyo a ciertas ideas ideológicas, siempre lo hace de manera neutral, realista y sin afiliación partidista ni religiosa.</p>
+      </details>
+
+      <details class="faq-card">
+        <summary>¿Qué beneficios tiene unirse a Hernavia?</summary>
+        <p>Formar parte de Hernavia te permite participar en votaciones, ser tomado en cuenta de manera activa y acceder a beneficios internos futuros de la comunidad.</p>
+      </details>
+
+    </div>
+  </section>
+
+  <!-- Estilo -->
+  <style>
+  .faq-container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .faq-card {
+    background-color: white;
+    border: 2px solid #006A44;
+    border-radius: 10px;
+    padding: 18px 20px; /* más compacto */
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  }
+
+  .faq-card summary {
+    font-weight: bold;
+    color: #006A44;
+    font-size: 1.2em;
+    list-style: none;
+    outline: none;
+  }
+
+  .faq-card summary::marker {
+    display: none;
+  }
+
+  .faq-card[open] {
+    background-color: #f4fff9;
+    border-color: #004a2d;
+  }
+
+  .faq-card p {
+    margin-top: 10px;
+    color: #333;
+    line-height: 1.5;
+  }
+
+  .faq-toggle {
+    background-color: #006A44;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 12px 25px;
+    font-size: 1.1em;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+
+  .faq-toggle:hover {
+    background-color: #004a2d;
+  }
+  </style>
+
   <footer>
     &copy; 2025 Hernavia — Proyecto Cultural
   </footer>
 
   <script>
-    // Mostrar/ocultar preguntas
-    const boton = document.getElementById('mostrarPreguntas');
-    const faq = document.getElementById('faqContainer');
+    // Mostrar / ocultar bloque de preguntas
+    const toggleButton = document.getElementById('toggleFAQ');
+    const faqContainer = document.getElementById('faqContainer');
     let visible = false;
 
-    boton.addEventListener('click', () => {
+    toggleButton.addEventListener('click', () => {
       visible = !visible;
-      faq.style.display = visible ? 'block' : 'none';
-      boton.textContent = visible ? 'Ocultar Preguntas' : 'Mostrar Preguntas';
+      faqContainer.style.display = visible ? 'block' : 'none';
+      toggleButton.textContent = visible ? 'Ocultar Preguntas' : 'Mostrar Preguntas';
     });
 
     // Registrar Service Worker
@@ -129,4 +196,3 @@
 
 </body>
 </html>
-
